# scale-calculator

./: .flake8  LICENSE  flake.nix  pyproject.toml
scale_calculator/: main.py  tunings.py
scale_calculator/data/tunings/: drop_d.toml  e_standard.toml
tests/: test_tunings.py
tests/tunings/: test_get.py  test_get_all.py
