[tool.poetry]
name = "scale-calculator"
version = "0.1.0"
description = ""
authors = ["Andrey Pavlov <andrey.pavlov@hey.com>"]
readme = "README.md"
packages = [{include = "scale_calculator"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
