[tool.poetry]
name = "scale-calculator"
version = "0.1.0"
description = ""
authors = ["Andrey Pavlov <andrey.pavlov@hey.com>"]
readme = "README.md"
packages = [{include = "scale_calculator"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.2"
hypothesis = "^6.84.2"
isort = "^5.12.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
]


[tool.isort]
profile = "black"
